--- a/.github/workflows/surge_deployment.yml
+++ b/.github/workflows/surge_deployment.yml
@@ -37,4 +37,4 @@ jobs:
       run: npm install --global surge
     
     - name: Run surge
-      run: surge ./build react_base_app.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: surge ./build react_base_app_basit_waseem.surge.sh --token ${{ secrets.SURGE_TOKEN }}
